<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.biologyquiz.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/question1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/q1option1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/q1option2" />

            <RadioButton
                android:id="@+id/q1Option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/q1option3" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/q1option4" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/question2" />

        <CheckBox
            android:id="@+id/q2Answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/q2option1" />

        <CheckBox
            android:id="@+id/q2Answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/q2option2" />

        <CheckBox
            android:id="@+id/q2Answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/q2option3" />

        <CheckBox
            android:id="@+id/q2Answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/q2option4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/question3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageDescription"
            android:paddingBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/shark" />

        <EditText
            android:id="@+id/q3Response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:paddingBottom="8dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q4Answer"
                android:text="@string/q4Option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/q4Option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <Button
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitQuiz"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
